# obs-studio

./: .cirrus.yml  .clang-format  .gitignore  CMake-Code-Guidelines.md  CMakeLists.txt  CMakePresets.json  CODESTYLE.md  buildspec.json
.github/scripts/: .Aptfile  .Brewfile  .build.zsh  .package.zsh  .run-format.zsh  Build-Windows.ps1  Package-Windows.ps1
.github/workflows/: README.md  analyze-project.yaml  build-project.yaml  check-format.yaml  code-sign-project.yaml  dispatch.yaml  flatpak.yml  labeled.yaml  lint-project.yaml  main.yml  main_2.yml  pr-pull.yaml  publish-steam.yaml  publish.yaml  pull-request.yaml  push-tag.yaml  push.yaml  release.yaml  schedule.yaml  scheduled.yaml  sign-windows.yaml
CI/: build-macos.sh  build-windows.ps1  install-dependencies-linux.sh
CI/flatpak/: com.obsproject.Studio.json
CI/include/: Brewfile  build_support_macos.sh  build_support_windows.ps1
CI/linux/: 01_install_dependencies.sh
CI/macos/: 01_install_dependencies.sh  02_build_obs.sh  03_package_obs.sh
CI/windows/: 01_install_dependencies.ps1  02_build_obs.ps1  03_package_obs.ps1
UI/: CMakeLists.txt  adv-audio-control.cpp  adv-audio-control.hpp  audio-encoders.cpp  auth-facebook.cpp  auth-facebook.hpp  auth-listener.cpp  auth-oauth.cpp  auth-restream.cpp  auth-restream.hpp  auth-twitch.cpp  auth-twitch.hpp  auth-youtube.cpp  auth-youtube.hpp  display-helpers.hpp  double-slider.cpp  facebook-api-objects.hpp  facebook-api-wrappers.cpp  facebook-api-wrappers.hpp  hotkey-edit.cpp  lineedit-autoresize.cpp  media-controls.cpp  multiview.cpp  obs-app.cpp  platform-osx.mm  properties-view.cpp  qt-wrappers.cpp  scene-tree.cpp  source-tree.cpp  sparkle-updater.mm  ui-config.h.in  volume-control.cpp  volume-control.hpp  window-basic-adv-audio.cpp  window-basic-auto-config-test.cpp  window-basic-auto-config.cpp  window-basic-filters.cpp  window-basic-interaction.cpp  window-basic-main-outputs.cpp  window-basic-main-profiles.cpp  (+22 more)
UI/cmake/: feature-browserpanels.cmake  feature-facebook.cmake  feature-importers.cmake  feature-restream.cmake  feature-sparkle.cmake  feature-twitch.cmake  feature-whatsnew.cmake  feature-youtube.cmake  legacy.cmake  os-freebsd.cmake  os-linux.cmake  os-macos.cmake  os-windows.cmake  ui-elements.cmake  ui-qt.cmake  ui-windows.cmake
UI/forms/: OBSFacebookActions.ui
UI/importers/: classic.cpp  sl.cpp  xsplit.cpp
UI/obs-frontend-api/: CMakeLists.txt
UI/obs-frontend-api/cmake/windows/: obs-module.rc.in
UI/xdg-data/: com.obsproject.Studio.appdata.xml.in
build-aux/: .run-format-launcher  .run-format.bash  .run-format.ps1  .run-format.zsh  com.obsproject.Studio.json  format-manifest.py  run-gersemi
cmake/32bit/: projects.cmake
cmake/Modules/: CompilerConfig.cmake  DeprecationHelpers.cmake  FileUtils.cmake  FindCEF.cmake  FindGio.cmake  FindJack.cmake  FindPythonWindows.cmake  FindSwigWindows.cmake  FindSysinfo.cmake  FindUdev.cmake  FindWayland.cmake  FindX11.cmake  ObsDefaults_Linux.cmake  ObsDefaults_Windows.cmake  ObsDefaults_macOS.cmake  ObsHelpers.cmake  ObsHelpers_Linux.cmake  ObsHelpers_Windows.cmake  ObsHelpers_macOS.cmake  VersionConfig.cmake
cmake/common/: .cmake-format.json  bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake  ccache.cmake  compiler_common.cmake  helpers_common.cmake  osconfig.cmake  versionconfig.cmake
cmake/finders/: FindCEF.cmake  FindDetours.cmake  FindFFmpeg.cmake  FindJack.cmake  FindLibAJANTV2.cmake  FindLibVLC.cmake  FindLibdrm.cmake  FindLibpci.cmake  FindLibrist.cmake  FindLibsrt.cmake  FindLibx264.cmake  FindLuajit.cmake  FindMbedTLS.cmake  FindPipeWire.cmake  Findgio.cmake  Findjansson.cmake  Findx11-xcb.cmake  Findxcb.cmake  Findxkbcommon.cmake
cmake/linux/: compilerconfig.cmake  cpackconfig.cmake  defaults.cmake  helpers.cmake  toolchain-aarch64-gcc.cmake
cmake/macos/: buildspec.cmake  compilerconfig.cmake  cpackconfig.cmake  defaults.cmake  helpers.cmake  simd.cmake  xcode.cmake
frontend/: OBSApp.cpp  OBSApp.hpp  OBSApp_Themes.cpp  OBSStudioAPI.cpp  OBSStudioAPI.hpp  obs-main.cpp
libobs/: .clang-format  CMakeLists.txt  obs-audio.c  obs-cocoa.m  obs-core-modules.c.in  obs-core-modules.h  obs-display.c  obs-hotkey-name-map.c  obs-hotkey.c  obs-module.c  obs-nix.c  obs-output.c  obs-scene.c  obs-source-deinterlace.c  obs-source-transition.c  obs-source.c  obs-video.c  obs-windows.c  obs.h
libobs-d3d11/: CMakeLists.txt  d3d11-subsystem.cpp
libobs-metal/: CMakeLists.txt  MTLCullMode+Extensions.swift  MTLOrigin+Extensions.swift  MTLPixelFormat+Extensions.swift  MTLRegion+Extensions.swift  MTLSize+Extensions.swift  MTLTexture+Extensions.swift  MTLTextureType+Extensions.swift  MTLViewport+Extensions.swift  MetalBuffer.swift  MetalDevice.swift  MetalOpaquePointer.swift  MetalRenderState.swift  MetalShader+Extensions.swift  MetalShader.swift  MetalTexture.swift  OBSBlendState.swift  OBSIndexBuffer.swift  OBSMetalDevice.swift  OBSSamplerState.swift  OBSShader+Analyzers.swift  OBSShader.swift  OBSShaderParser.swift  OBSStageSurface.swift  OBSSwapChain.swift  OBSTexture.swift  OBSVertexBuffer.swift  OBSZStencilBuffer.swift  libobs+Extensions.swift  libobs+SignalHandlers.swift  libobs-metal-Bridging-Header.h  metal-indexbuffer.swift  metal-samplerstate.swift  metal-shader.swift  metal-stagesurf.swift  metal-subsystem.swift  metal-swapchain.swift  metal-texture2d.swift  metal-texture3d.swift  metal-unimplemented.swift  (+2 more)
libobs-opengl/: CMakeLists.txt  gl-cocoa.m
libobs-opengl/cmake/: legacy.cmake
libobs-opengl/cmake/windows/: obs-module.rc.in
libobs-winrt/: CMakeLists.txt
plugins/: .cmake-format.json  CMakeLists.txt
plugins/linux-pipewire/: CMakeLists.txt  pipewire.c
plugins/mac-virtualcam/src/dal-plugin/: CMakeLists.txt  OBSDALPlugIn.mm
plugins/mac-virtualcam/src/obs-plugin/: CMakeLists.txt
plugins/obs-ffmpeg/obs-nvenc-test/: CMakeLists.txt  jim-nvenc-test.c
plugins/obs-ffmpeg/obs-nvenc-test/cmake/: legacy.cmake
plugins/text-freetype2/: CMakeLists.txt  find-font.c  find-font.h  text-freetype2.h
plugins/text-freetype2/cmake/windows/: obs-module.rc.in
test/: CMakeLists.txt
(+479 files in other folders)
